college prj/force-app/main/default/objects/Staff__c/fields/Books_Taken__c.field-meta.xml
<CustomField>
    <fullName>Books_Taken__c</fullName>
    <label>Books Taken</label>
    <summaryForeignKey>Books_Issue__c.Staff__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>