college prj/force-app/main/default/objects/Staff__c/fields/Days_Absent__c.field-meta.xml
<CustomField>
    <fullName>Days_Absent__c</fullName>
    <label>Days Absent</label>
    <summaryFilterItems>
        <field>Staff_Attendence__c.Present__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Staff_Attendence__c.Staff__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>