college prj/force-app/main/default/objects/Staff__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeronautical Engineering.</fullName>
            </value>
            <value>
                <fullName>Automobile Engineering.</fullName>
            </value>
            <value>
                <fullName>Biotechnology.</fullName>
            </value>
            <value>
                <fullName>Civil Engineering.</fullName>
            </value>
            <value>
                <fullName>Computer Science and Engineering.</fullName>
            </value>
            <value>
                <fullName>Electrical and Electronics Engineering.</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering.</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Communication.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>