college prj/force-app/main/default/objects/Staff__c/fields/Proficiency_Type__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Type__c</fullName>
    <label>Proficiency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Non-Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>