college prj/force-app/main/default/objects/Staff__c/fields/Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>Staff_ID__c</fullName>
    <displayFormat>STAFF-{0000}</displayFormat>
    <label>Staff ID</label>
    <type>AutoNumber</type>
</CustomField>