college prj/force-app/main/default/objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staff_ID__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Proficiency_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>